# SWIM-Sim

./: .gitignore  README.md
Neural Dynamics Model V2/: README.md  main.py  pyproject.toml  requirements.txt
Neural Dynamics Model V2/configs/: experiment1.yaml  pacinian_model.yaml  pacinian_model_supp1.yaml  supplementary_experiment1.yaml
Neural Dynamics Model V2/data/results/: DLM_2_population_outputs.npz  DLM_3_population_outputs.npz  LM_C_population_outputs.npz  LM_L_population_outputs.npz  ULM_L_population_outputs.npz  summary.json
Neural Dynamics Model V2/data/results_supp1/: ULM_L_M0p2_population_outputs.npz  ULM_L_M0p5_population_outputs.npz  ULM_L_M1p0_population_outputs.npz  ULM_L_M1p2_population_outputs.npz  ULM_L_M2p0_population_outputs.npz  summary.json
Neural Dynamics Model V2/src/swim_model/: backend.py  config.py  pipeline.py
Neural Dynamics Model V2/src/swim_model/io/: load_kwave_mat.py
Neural Dynamics Model V2/src/swim_model/mechanics/: coherent_integration.py
Neural Dynamics Model V2/src/swim_model/neural/: lif.py  pacinian_filter.py  population_simulator.py
Neural Dynamics Model V2/src/swim_model/neural/__pycache__/: lif.run_lif_population-7.py312.1.nbc  lif.run_lif_population-7.py312.2.nbc  (+1 more)
Neural Dynamics Model V2/src/swim_model/preprocessing/: detrend_and_window.py  receptor_lattice.py  shear_equivalent.py
Neural Dynamics Model V2/src/swim_model/readout/: clarity_score.py  intensity_score.py  pairwise_prediction.py
Neural Dynamics Model V2/tests/: test_delay_kernel.py  test_filter.py  test_readout.py
Sim/: combine_plots.py  (+3 more)
(+24 files in other folders)
